--- a/templates/table.html
+++ b/templates/table.html
@@ -57,7 +57,7 @@
 		    {% if mode.name == current_mode.name %}
 			{{mode.name}}
 		    {% else %}
-			<a href="/?version={{current_version.version}}&mode={{mode.id}}">{{mode.name}}</a>
+			<a href="/?version={{current_version.version}}&mode={{mode.number}}">{{mode.name}}</a>
 		    {% endif %}
 		</li>
 	    {% endfor %}
