--- a/templates/table.html
+++ b/templates/table.html
@@ -6,6 +6,9 @@
     <title>iiChantra: Рекорды</title>
     <link rel="stylesheet" type="text/css" href="http://iichantra.ru/public/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="/css/hs2.css"/>
+    <link rel="stylesheet" type="text/css" href="http://iichantra.ru/public/css/mom_en.css" />
+    <link rel="stylesheet" type="text/css" href="http://iichantra.ru/public/css/ceebox-min.css" />
+    <link rel="alternate" type="application/atom+xml" title="iiChantra feed" href="http://feeds.feedburner.com/IichantrasFeed">
     <link rel="shortcut icon" href="http://iichantra.ru/img/favicon.png"/>
     <meta name="author" content="mezriss(at)gmail.com"/>
     <meta name="google-site-verification" content="-8ho8ECeyYPklW42sS8kz0ItHyQdO2RQZfSqk9VUih8"/>
